tweak(resources): iniciar o saltychat ao inves do toko :p

--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -91,7 +91,8 @@ ensure frp_shop_sell
 ensure frp_stable
 ensure frp_gunsmith
 #ensure frp_weaponshop
-ensure tokovoip_script
+# ensure tokovoip_script
+ensure saltychat
 
 ensure interiors
 
