tweak: desabilitar o frp_treasure

--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -78,7 +78,7 @@ ensure frp_delivery
 ensure frp_cacador
 
 #ensure frp_fort
-ensure frp_treasure
+# ensure frp_treasure
 
 ensure frp_rodaroupas
 #ensure frp_pet
