feat: equipar/desequipar pás, cavar em qualquer lugar e outras melhorias na estrutura do codigo.

--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -115,3 +115,9 @@ ensure frp_fumaca
 ensure world-water-interaction
 
 ensure frp_crafting
+
+# ensure generic_handheld_item
+# ensure handheld_shovel_item
+
+# ensure ground_digging
+# ensure grave_digging
