tweak(resources): iniciar handheld e scripts de cavar.

--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -116,8 +116,8 @@ ensure world-water-interaction
 
 ensure frp_crafting
 
-# ensure generic_handheld_item
-# ensure handheld_shovel_item
+ensure generic_handheld_item
+ensure handheld_shovel_item
 
-# ensure ground_digging
-# ensure grave_digging
+ensure ground_digging
+ensure grave_digging
