tweak(resoureces): iniciar scripts recem adicionados.

--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -118,6 +118,10 @@ ensure frp_crafting
 
 ensure generic_handheld_item
 ensure handheld_shovel_item
+ensure handheld_miningpan_item
 
 ensure ground_digging
 ensure grave_digging
+
+ensure temporary_wagon_shop
+ensure hunting_wagon
