feat(client): otimizações.

--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -102,7 +102,7 @@ ensure DiscordBot
 ensure redemrp_menu_base
 ensure ak_menubase
 ensure Outlaws--Interactions
-ensure dkt_fishing
+# ensure dkt_fishing
 ensure dkt_lumberjack
 ensure dkt_mining
 ensure dkt_sounds
