--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -74,7 +74,6 @@ ensure medic
 #ensure pescajob
 ensure sheriff
 ensure frp_delivery
-ensure frp_cacador
 
 #ensure frp_fort
 # ensure frp_treasure
@@ -116,6 +115,8 @@ ensure world-water-interaction
 
 ensure frp_crafting
 
+ensure loot_table_gen
+
 ensure generic_handheld_item
 ensure handheld_shovel_item
 ensure handheld_miningpan_item
@@ -125,3 +126,5 @@ ensure grave_digging
 
 ensure temporary_wagon_shop
 ensure hunting_wagon
+
+ensure frp_cacador # Dependente do hunting_wagon por enquanto.
