[resources]: Starta os arquivos para o natal

--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -50,7 +50,6 @@ ensure frp_peagle
 ensure frp_progressbar
 ensure frp_systempay
 ensure frp_train
-ensure frp_sync
 ensure frp_wanted
 ensure frp_w
 ensure frp_gathering
@@ -125,3 +124,7 @@ ensure temporary_wagon_shop
 ensure hunting_wagon
 
 ensure frp_cacador # Dependente do hunting_wagon por enquanto.
+
+# external
+ensure weathersync
+ensure xmas
