--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -107,7 +107,7 @@ ensure world-water-interaction
 
 ensure truques_armas
 ensure frp_ponte
-ensure frp_fumaca
+#ensure frp_fumaca
 ensure ricx_scenarios
 
 ensure frp_crafting
