--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -88,12 +88,14 @@ ensure interiors
 ensure moonshine_interiors
 
 ensure campfire
+ensure itensacampamento
 ensure console
 ensure maps
 ensure DiscordBot
 ensure redemrp_menu_base
 ensure ak_menubase
 ensure Outlaws--Interactions
+ensure 3dme-master
 
 ensure dkt_lumberjack
 ensure dkt_mining
@@ -127,4 +129,4 @@ ensure frp_cacador # Dependente do hunting_wagon por enquanto.
 
 # external
 ensure weathersync
-ensure xmas
+#ensure xmas      #FAz nevar 
