--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -27,6 +27,7 @@ ensure frp_basicneeds
 
 #ensure dkt_acogueiro
 ensure fumi_npccontrol
+ensure fumi_dlog
 
 ensure frp_creator
 ensure frp_faroeste
