--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -44,15 +44,15 @@ ensure frp_hud
 ensure frp_herb_population
 ensure frp_horse
 ensure frp_jail
-ensure frp_me
+#ensure frp_me
 ensure frp_barber
-ensure frp_newspaper
+#ensure frp_newspaper
 ensure frp_notify
-ensure frp_notepad
+#ensure frp_notepad
 ensure frp_peagle
 ensure frp_progressbar
 ensure frp_systempay
-ensure frp_train
+#ensure frp_train
 ensure frp_wanted
 ensure frp_w
 ensure frp_gathering
@@ -102,7 +102,7 @@ ensure privilege_system
 ensure world-water-interaction
 
 ensure truques_armas
-ensure frp_ponte
+#ensure frp_ponte
 #ensure frp_fumaca
 ensure ricx_scenarios
 
