Modificações Fumi/Patifico

--- a/configs/resources.cfg
+++ b/configs/resources.cfg
@@ -24,6 +24,7 @@ ensure frp_admin
 ensure frp_animation
 ensure frp_bank
 ensure frp_basicneeds
+ensure frp_toast
 
 #ensure dkt_acogueiro
 ensure fumi_npccontrol
